; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_incomplete_decay.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_incomplete_decay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_8__* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @incomplete_decay(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %5 = call i64 @is_incomplete_array_type(%struct.TYPE_8__* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %9 = call i64 @is_ptr_type(%struct.TYPE_8__* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %7, %1
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %15 = call %struct.TYPE_8__* @incomplete_decay(%struct.TYPE_8__* %14)
  %16 = call %struct.TYPE_8__* @type_ptr(%struct.TYPE_8__* %15)
  store %struct.TYPE_8__* %16, %struct.TYPE_8__** %2, align 8
  br label %19

17:                                               ; preds = %7
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_8__* %18, %struct.TYPE_8__** %2, align 8
  br label %19

19:                                               ; preds = %17, %11
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  ret %struct.TYPE_8__* %20
}

declare dso_local i64 @is_incomplete_array_type(%struct.TYPE_8__*) #1

declare dso_local i64 @is_ptr_type(%struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_8__* @type_ptr(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
